--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       --text:#e6eef8;
       --subtext:#9fb3d8;
       --muted:rgba(255,255,255,0.4);
-      --accent: #2563eb;
-      --card-bg: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+      --accent:#2563eb;
+      --card-bg:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+      --input-height:40px;
     }
     body.light{
       --bg:#f5f7fa;
@@ -36,7 +37,6 @@
 
     .container{width:100%; max-width:980px; margin:0 auto;}
 
-    /* Download Card */
     .card{
       background:var(--card-bg);
       border-radius:12px;
@@ -56,13 +56,10 @@
       font-weight:600;
       min-width:120px;
     }
-    .btn-small:active{transform:translateY(1px);}
-
     .banner{width:100%; height:auto; border-radius:10px; margin-bottom:12px;}
 
     h1{margin:0 0 6px 0; font-size:clamp(18px,3vw,24px);}
     p.lead{margin:0 0 14px 0; color:var(--subtext); font-size:14px;}
-
     #clock{color:var(--subtext); font-size:13px; margin-bottom:12px;}
 
     /* Download buttons grid */
@@ -87,7 +84,6 @@
       gap:8px;
       box-sizing:border-box;
     }
-    .btn-download:active{transform:translateY(1px);}
 
     /* Shop Section (minimal clean) */
     .shop{
@@ -106,16 +102,20 @@
       box-shadow:0 6px 20px rgba(2,6,23,0.28);
     }
 
-    /* inputs */
+    /* inputs aligned left and proportional */
     .inputs{
       display:flex;
       gap:10px;
       margin-top:8px;
       flex-wrap:wrap;
+      align-items:start;
     }
     .inputs input{
-      flex:1 1 220px;
-      padding:10px;
+      flex:0 1 320px; /* desktop width */
+      max-width:420px;
+      min-width:200px;
+      height:var(--input-height);
+      padding:8px 12px;
       border-radius:8px;
       border:1px solid rgba(255,255,255,0.12);
       background:rgba(0,0,0,0.06);
@@ -123,11 +123,14 @@
       box-sizing:border-box;
       font-size:14px;
     }
+    .inputs .left-col{display:flex; flex-direction:column; gap:8px; flex:0 1 420px;}
+
     .warning{
       color:#ffd166;
       font-size:13px;
       margin-top:6px;
       display:none;
+      text-align:left;
     }
     .warning.show{display:block;}
 
@@ -173,8 +176,8 @@
       transition:opacity .25s ease;
     }
     .paypal-wrapper.disabled{
-      opacity:0.6;
-      pointer-events:none; /* crucial: prevents clicks */
+      opacity:0.55;
+      pointer-events:none; /* prevent clicks */
     }
 
     /* accepted cards row under paypal */
@@ -195,9 +198,9 @@
     footer{margin-top:18px; color:var(--subtext); font-size:13px; text-align:center;}
 
     /* small screens adjustments */
-    @media (max-width:600px){
-      body{padding:12px;}
-      .inputs{flex-direction:column;}
+    @media (max-width:900px){
+      .inputs{flex-direction:column; align-items:stretch;}
+      .inputs .left-col{flex:1;}
       .download-grid{grid-template-columns:1fr;}
       .roles-grid{grid-template-columns:1fr;}
       .controls{justify-content:space-between;}
@@ -232,7 +235,7 @@
     </div>
 
     <!-- Shop section -->
-    <section class="shop">
+    <section class="shop" aria-labelledby="roleshop">
       <div class="shop-card shop-header" aria-hidden="false">
         <h2 class="shop-title" id="roleshop">Role Shop</h2>
         <p style="margin:0;color:var(--subtext);font-size:13px;">Select a role to purchase using PayPal.</p>
@@ -240,10 +243,17 @@
 
       <div class="shop-card" aria-label="Role purchase area">
         <div class="inputs" role="form" aria-label="Buyer inputs">
-          <input id="growid" type="text" placeholder="Enter your GrowID" autocomplete="off" />
-          <input id="buyerEmail" type="email" placeholder="Enter your Email" autocomplete="email" />
+          <div class="left-col">
+            <label for="growid" style="font-size:13px;margin-bottom:4px;color:var(--subtext);">GrowID</label>
+            <input id="growid" type="text" placeholder="Enter your GrowID" autocomplete="off" />
+          </div>
+          <div style="display:flex;flex-direction:column;gap:8px;">
+            <label for="buyerEmail" style="font-size:13px;margin-bottom:4px;color:var(--subtext);">Email</label>
+            <input id="buyerEmail" type="email" placeholder="Enter your Email" autocomplete="email" />
+          </div>
         </div>
-        <div id="warning" class="warning">⚠️ Isi GrowID dan Email terlebih dahulu untuk mengaktifkan pembayaran.</div>
+
+        <div id="warning" class="warning">⚠️ Please fill in your GrowID and Email to enable payment.</div>
 
         <div class="roles-grid" id="rolesGrid" aria-live="polite"></div>
       </div>
@@ -253,12 +263,9 @@
   </div>
 
   <script>
-    // initialize emailjs
-    if (window.emailjs) {
-      emailjs.init("zEjStXCET2RlB2UuJ");
-    }
+    // init emailjs if available
+    if (window.emailjs) { emailjs.init("zEjStXCET2RlB2UuJ"); }
 
-    // Roles data
     const roles = [
       { name: "Moderator", price: "3.29" },
       { name: "Super Moderator", price: "5.39" },
@@ -272,7 +279,7 @@
     const emailInput = document.getElementById('buyerEmail');
     const warningEl = document.getElementById('warning');
 
-    // create role cards with PayPal containers + accepted card icons
+    // build role cards
     roles.forEach(role => {
       const wrapper = document.createElement('div');
       wrapper.className = 'role';
@@ -280,14 +287,9 @@
       const inner = document.createElement('div');
       inner.className = 'role-inner';
 
-      const title = document.createElement('h3');
-      title.textContent = role.name;
+      const title = document.createElement('h3'); title.textContent = role.name;
+      const price = document.createElement('div'); price.className = 'price'; price.textContent = `$${role.price} — PayPal`;
 
-      const price = document.createElement('div');
-      price.className = 'price';
-      price.textContent = `$${role.price} — PayPal`;
-
-      // paypal wrapper always visible; will be disabled until inputs are filled
       const paypalWrapper = document.createElement('div');
       paypalWrapper.className = 'paypal-wrapper disabled';
       paypalWrapper.id = `paypal-wrapper-${role.name.replace(/\s/g,'')}`;
@@ -297,27 +299,24 @@
 
       paypalWrapper.appendChild(paypalBtnHolder);
 
-      // accepted cards icons row
       const accepted = document.createElement('div');
       accepted.className = 'accepted-cards';
       accepted.innerHTML = `
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal" title="PayPal"/>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa" title="Visa"/>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="MasterCard" title="MasterCard"/>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Discover_Card_logo.svg" alt="Discover" title="Discover"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="MasterCard"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Discover_Card_logo.svg" alt="Discover"/>
       `;
 
       inner.appendChild(title);
       inner.appendChild(price);
       inner.appendChild(paypalWrapper);
       inner.appendChild(accepted);
-
       wrapper.appendChild(inner);
       rolesGrid.appendChild(wrapper);
 
-      // render PayPal button into placeholder
-      // Ensure paypal SDK loaded
-      function renderPayPal() {
+      // render PayPal button (retry until SDK ready)
+      (function renderPayPal(){
         if (window.paypal && paypal.Buttons) {
           paypal.Buttons({
             style: { layout: 'vertical', color: 'blue', shape: 'rect', label: 'paypal' },
@@ -340,38 +339,29 @@
                   buyer_email: emailVal,
                   paypal_name: paypalName,
                   paypal_email: paypalEmail,
-                  amount: amount,
+                  amount,
                   role: role.name
-                }).then(() => {
-                  console.log('email sent');
-                }).catch(err => {
-                  console.error('EmailJS error', err);
-                });
+                }).catch(err => console.error('EmailJS error', err));
               }
             }),
             onError: err => console.error('PayPal error', err)
           }).render(`#paypal-button-${role.name.replace(/\s/g,'')}`);
         } else {
-          // retry after short delay until paypal SDK is ready
           setTimeout(renderPayPal, 200);
         }
-      }
-      renderPayPal();
+      })();
     });
 
-    // toggle payability based on inputs
+    // toggle payability & warning based on inputs
     function updatePayability() {
       const ok = growInput.value.trim() && emailInput.value.trim();
-      document.querySelectorAll('.paypal-wrapper').forEach(w => {
-        w.classList.toggle('disabled', !ok);
-      });
+      document.querySelectorAll('.paypal-wrapper').forEach(w => w.classList.toggle('disabled', !ok));
       warningEl.classList.toggle('show', !ok);
     }
-
     growInput.addEventListener('input', updatePayability);
     emailInput.addEventListener('input', updatePayability);
 
-    // copy utilities for download buttons
+    // copy and clock utilities
     const configData = {
       powertunnel: `91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
@@ -388,37 +378,38 @@ www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13`
     };
     function copyText(key, btn){
-      navigator.clipboard.writeText(configData[key]).then(() => {
+      navigator.clipboard.writeText(configData[key]).then(()=>{
         const old = btn.textContent;
         btn.textContent = "✅ Copied!";
-        setTimeout(()=> btn.textContent = old, 1600);
+        setTimeout(()=> btn.textContent = old, 1400);
       });
     }
 
-    // clock (Sydney)
     function updateClock(){
       const now = new Date();
       const sydney = new Date(now.toLocaleString('en-US',{timeZone:'Australia/Sydney'}));
       document.getElementById('clock').textContent = 'Sydney Time: ' + sydney.toLocaleTimeString('en-GB');
     }
-    updateClock();
-    setInterval(updateClock,1000);
+    updateClock(); setInterval(updateClock,1000);
 
-    // theme & language toggles (kept simple)
-    function toggleTheme(){
-      document.body.classList.toggle('light');
-    }
-    let lang='en';
+    // theme & language toggles (default: English)
+    function toggleTheme(){ document.body.classList.toggle('light'); }
+
+    let lang = 'en';
     function toggleLang(){
-      lang = (lang==='en')?'id':'en';
-      const en = lang==='en';
+      lang = (lang === 'en') ? 'id' : 'en';
+      const en = lang === 'en';
       document.querySelector('.btn-small[onclick="toggleLang()"]').textContent = en ? '🌍 Indonesia' : '🌍 English';
       document.getElementById('title').textContent = en ? 'Growfax — Download Files' : 'Growfax — Unduh File';
       document.getElementById('desc').textContent = en ? 'Choose the file you want to copy or download.' : 'Pilih file yang ingin disalin atau diunduh.';
       document.getElementById('roleshop').textContent = en ? 'Role Shop' : 'Toko Role';
+      // warning translations
+      warningEl.textContent = en
+        ? '⚠️ Please fill in your GrowID and Email to enable payment.'
+        : '⚠️ Isi GrowID dan Email terlebih dahulu untuk mengaktifkan pembayaran.';
     }
 
-    // init state
+    // initialize state
     updatePayability();
   </script>
 </body>
